--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     }
   },
   "dependencies": {
+    "@expo-google-fonts/amarante": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
