feat(redux): add redux-toolkit, redux-persist, async-storage

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,8 @@
         "allow": ["info", "warn", "error"]
       }
     ],
+    "no-plusplus": ["off", { "allowForLoopAfterthoughts": true }],
+    "no-param-reassign": ["error", { "props": false }],
     "no-use-before-define": "off",
     "no-shadow": "off",
     "react/prop-types": 0,
