--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-asset": "~8.3.2",
@@ -70,6 +71,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
+    "react-query": "^3.19.0",
     "react-redux": "^7.2.4",
     "redux-persist": "^6.0.0"
   },
